--- a/harbour-dota2Almanac.desktop
+++ b/harbour-dota2Almanac.desktop
@@ -3,7 +3,7 @@ Type=Application
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-dota2Almanac
 Exec=harbour-dota2Almanac
-Name=harbour-dota2Almanac
+Name=Dota2老黄历
 # translation example:
 # your app name in German locale (de)
 Name[de]=harbour-dota2Almanac
